<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.DetailActivity">

    <ImageView
        android:id="@+id/ivPosterDetail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/poster_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintDimensionRatio="16:9"
        android:scaleType="centerCrop"
        />

    <TextView
        android:id="@+id/tvTitleDetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/movie_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/ivPosterDetail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvYearDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year_2023"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitleDetail"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvImdbIdDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/imdb_id_tt1234567"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tvYearDetail"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvPlotDetail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/sinopsis_aqu_ir_la_descripci_n_o_sinopsis_de_la_pel_cula"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="12dp"
        android:lineSpacingExtra="4dp"
        app:layout_constraintTop_toBottomOf="@id/tvImdbIdDetail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:scrollbars="vertical"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
