<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="12dp"
    card_view:cardElevation="6dp"
    card_view:cardBackgroundColor="@color/black">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Imagen del póster -->
        <ImageView
            android:id="@+id/imgThumbnail"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_margin="4dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:contentDescription="@string/poster_image"
            android:background="@drawable/image_rounded_bg" />

        <!-- Íconos superpuestos en la esquina superior derecha -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="6dp"
            android:layout_gravity="top|end">

            <ImageButton
                android:id="@+id/btnFavorite"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_favorite_border"
                android:tint="@color/red"
                android:contentDescription="@string/favorito" />

            <ImageButton
                android:id="@+id/btnMoreInfo"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_info"
                android:tint="@color/colorPrimary"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/mas_informaci_n" />
        </LinearLayout>
    </FrameLayout>
</androidx.cardview.widget.CardView>
