<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/ProfileSelection">

    <ImageView
        android:id="@+id/headerImage"
        android:layout_width="0dp"
        android:layout_height="350dp"
        android:scaleType="centerCrop"
        android:src="@drawable/welcome_image2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" /> <ImageView
    android:id="@+id/imageGradient"
    android:layout_width="0dp"
    android:layout_height="350dp"
    android:src="@drawable/gradient_bottom"
    android:scaleType="fitXY"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent" /> <ImageView
    android:id="@+id/logo"
    android:layout_width="120dp"
    android:layout_height="120dp"
    android:layout_marginTop="32dp"
    android:src="@drawable/logo_filmbox"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/> <TextView
    android:id="@+id/whoIsWatchingText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:text="@string/who_s_watching"
    android:textColor="@android:color/white"
    android:textSize="26sp"
    android:textStyle="bold"
    app:layout_constraintTop_toBottomOf="@id/logo"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/containerProfiles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="24dp"
        android:paddingHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/whoIsWatchingText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/addProfile"
        android:layout_width="140dp"
        android:layout_height="180dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_add_profile_rounded"
        android:clipToOutline="true"
        android:elevation="4dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/containerProfiles">

        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:contentDescription="@string/add_profile_icon"
            android:src="@drawable/ic_add" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/add_profile"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/editProfilesContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addProfile">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_edit" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/edit_profiles"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonsContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/doneButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/btn_background_selector"
            android:textColor="@color/btn_text_color_selector"
            android:text="@string/done" />

        <Button
            android:id="@+id/skipButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_background_selector"
            android:textColor="@color/btn_text_color_selector"
            android:text="@string/skip" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>